--- a/packages/react-app/package.json
+++ b/packages/react-app/package.json
@@ -12,7 +12,7 @@
         "@celo/rainbowkit-celo": "^1.0.1",
         "@headlessui/react": "^1.7.14",
         "@heroicons/react": "^2.0.18",
-        "@rainbow-me/rainbowkit": "^1.0.2",
+        "@rainbow-me/rainbowkit": "^0.12.0",
         "@types/react-blockies": "^1.4.1",
         "ethers": "^5.7.2",
         "next": "^13.4.2",
@@ -21,8 +21,7 @@
         "react-dom": "18.2.0",
         "react-toastify": "^9.1.3",
         "use-debounce": "^9.0.4",
-        "viem": "^0.3.30",
-        "wagmi": "1.2"
+        "viem": "^0.3.30"
     },
     "devDependencies": {
         "@types/node": "^20.2.1",
@@ -34,7 +33,8 @@
         "postcss": "^8.4.23",
         "react-icons": "^4.10.1",
         "tailwindcss": "^3.3.2",
-        "typescript": "^5.0.4"
+        "typescript": "^5.0.4",
+        "wagmi": "^0.12.0"
     },
     "browser": {
         "net": false
